[package]
name = "json_snoop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.15", features = ["client", "http1", "server", "tcp"] }
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.130", features = ["derive"] }
clap = "2.33.3"
serde_json = "1.0.71"
jsonxf = "1.1.1"
colour = "0.6.0"
